优化首页项目栏

--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -50,15 +50,25 @@
             android:layout_height="190dp">
         </ViewFlipper>
         <!--最新约稿栏目代码-->
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="最新约稿"
-            android:textSize="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="3dp"
-            android:background="#ffffff"/>
+            android:orientation="horizontal"
+            android:background="#ffffff">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:src="@drawable/bar"
+                android:paddingTop="9dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="最新约稿"
+                android:textSize="20dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="2dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -195,15 +205,25 @@
             </LinearLayout>
         </LinearLayout>
         <!--点赞榜栏目代码-->
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="点赞榜"
-            android:textSize="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="3dp"
-            android:background="#ffffff"/>
+            android:orientation="horizontal"
+            android:background="#ffffff">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:src="@drawable/bar"
+                android:paddingTop="9dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="点赞榜"
+                android:textSize="20dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="2dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
