--- a/app/src/main/res/layout/layout_request.xml
+++ b/app/src/main/res/layout/layout_request.xml
@@ -1,262 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:scrollbars="vertical"
-    android:fadingEdge="vertical"
-    android:background="#EAF8FD">
-
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="0dp"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    tools:context="com.example.administrator.missphoto.MainActivity">
+    android:background="#EAF8FD">
 
+    <include layout="@layout/top_menu_back"/>
 
-    <!--标题部分-->
-    <LinearLayout
+    <ListView
+        android:id="@+id/LvReqAdpview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:src="@drawable/btn_back"
-            android:background="#ffffff"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="MissPhoto"
-            android:textSize="18dp"
-            android:paddingLeft="100dp"
-            android:paddingTop="10dp"
-            android:background="#ffffff"/>
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:dividerHeight="3dp"></ListView>
 
 
-    <!--第一部分-->
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:background="#ffffff"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageButton
-                    android:background="#00000000"
-                    android:layout_margin="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/touxiang1"/>
-
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/textview_border"
-                    android:layout_width="250dp"
-                    android:layout_height="30dp"
-                    android:text="喵星狗宠物店老版"
-                    android:gravity="center_vertical"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-                <TextView
-                    android:id="@+id/ed_request1"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="5dp"
-                    android:hint="具体要求:"
-                    android:gravity="top"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-
-                <TextView
-                    android:id="@+id/tv_date1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="发布时间："/>
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-
-        <!--第二部分-->
-        <LinearLayout
-            android:background="#ffffff"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageButton
-                        android:background="#00000000"
-                        android:layout_margin="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/touxiang2"/>
-
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/textview_border"
-                        android:layout_width="250dp"
-                        android:layout_height="30dp"
-                        android:text="神经病摄影馆"
-                        android:gravity="center_vertical"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-                <TextView
-                    android:id="@+id/ed_request2"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="5dp"
-                    android:hint="具体要求:"
-                    android:gravity="top"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-
-                <TextView
-                    android:id="@+id/tv_date2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="发布时间："/>
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <!--第三部分-->
-        <LinearLayout
-            android:background="#ffffff"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageButton
-                        android:background="#00000000"
-                        android:layout_margin="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/touxiang3"/>
-
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/textview_border"
-                        android:layout_width="250dp"
-                        android:layout_height="30dp"
-                        android:text="神经病摄影馆"
-                        android:gravity="center_vertical"/>
-'
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-                <TextView
-                    android:id="@+id/ed_request3"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="5dp"
-                    android:hint="具体要求:"
-                    android:gravity="top"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/yuanjiao">
-
-                <TextView
-                    android:id="@+id/tv_date3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="发布时间："/>
-            </LinearLayout>
-
-        </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
-</ScrollView>
