--- a/app/src/main/res/layout/loyout_begin.xml
+++ b/app/src/main/res/layout/loyout_begin.xml
@@ -4,6 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="bottom"
-    android:background="@drawable/shili4">
+    android:background="@drawable/begin">
 
 </LinearLayout>
