--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -10,30 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
         android:gravity="center"
         android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/image_tutorial"
-            android:layout_width="310dp"
-            android:layout_height="564dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/image1" />
 
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
         android:layout_marginBottom="20dp" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:orientation="horizontal" >
@@ -42,31 +39,35 @@
                 android:id="@+id/tutorial_indicator1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:background="@drawable/indicator_page" />
 
             <ImageView
                 android:id="@+id/tutorial_indicator2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:background="@drawable/indicator_dot" />
 
             <ImageView
                 android:id="@+id/tutorial_indicator3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:background="@drawable/indicator_dot" />
 
             <ImageView
                 android:id="@+id/tutorial_indicator4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:background="@drawable/indicator_dot" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:orientation="horizontal" >
@@ -77,11 +78,16 @@
                 android:layout_height="wrap_content"
                 android:text="跳过"
                 android:textSize="20dp"
-                android:textColor="#323232"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/skip"
-                android:drawablePadding="10dp" />
-
+                android:textColor="#323232" />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="45dp"
+            android:gravity="center"
+            android:orientation="horizontal" >
             <Button
                 android:id="@+id/done_button"
                 android:layout_width="wrap_content"
@@ -89,11 +95,8 @@
                 android:text="立即体验"
                 android:textSize="20dp"
                 android:textColor="#323232"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/done"
                 android:drawablePadding="10dp"
-                android:visibility="gone" />
-
+                android:visibility="gone"></Button>
         </LinearLayout>
 
     </RelativeLayout>
