--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -26,7 +26,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp" >
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,12 +71,13 @@
             android:gravity="center"
             android:orientation="horizontal" >
 
-            <Button
+             <Button
                 android:id="@+id/skip_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:text="跳过"
                 android:textSize="20dp"
+                 android:background="@drawable/shape1"
                 android:textColor="#323232" />
             </LinearLayout>
         <LinearLayout
@@ -92,10 +92,11 @@
                 android:id="@+id/done_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/shape1"
                 android:text="立即体验"
                 android:textSize="21dp"
                 android:textColor="#323232"
-                android:drawablePadding="10dp"
+                android:drawablePadding="1dp"
                 android:visibility="gone"></Button>
         </LinearLayout>
 
