去除两个多余的样式xml

--- a/app/src/main/res/drawable/indicator_page.xml
+++ b/app/src/main/res/drawable/indicator_page.xml
@@ -7,4 +7,7 @@
         android:color="@color/colorPrimaryDarkzs" />
     <size android:width="15dp"
         android:height="15dp" />
+    <stroke
+        android:width="0.3dp"
+        android:color="@color/colorAccentzs"/>
 </shape>
