--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -78,7 +78,7 @@
                 android:text="跳过"
                 android:textSize="20dp"
                  android:background="@drawable/shape1"
-                android:textColor="#323232" />
+                android:textColor="#716d6d" />
             </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
