Revert "去除两个多余的样式xml"
This reverts commit dd5457520c99db3cb1e9197b24ff3995166dd1bc.

--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -78,7 +78,7 @@
                 android:text="跳过"
                 android:textSize="20dp"
                  android:background="@drawable/shape1"
-                android:textColor="#716d6d" />
+                android:textColor="#323232" />
             </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
