--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -77,7 +77,7 @@
                 android:layout_height="44dp"
                 android:text="跳过"
                 android:textSize="20dp"
-                 android:background="@drawable/shape1"
+                 android:background="@drawable/indicator_page"
                 android:textColor="#323232" />
             </LinearLayout>
         <LinearLayout
@@ -92,7 +92,7 @@
                 android:id="@+id/done_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape1"
+                android:background="@drawable/indicator_page"
                 android:text="立即体验"
                 android:textSize="21dp"
                 android:textColor="#323232"
