--- a/app/src/main/res/layout/activity_zhuce.xml
+++ b/app/src/main/res/layout/activity_zhuce.xml
@@ -68,11 +68,24 @@
                 android:background="@drawable/yuanjiao"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
+
                 android:id="@+id/zhuce_password"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:hint="请输入密码："
+                android:gravity="top"/>
+
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/yuanjiao"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:id="@+id/zhuce_uaccount"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:hint="请输入联系方式："
                 android:gravity="top"/>
 
         </LinearLayout>
