解决了每次运行生成多个程序图标的问题，优化界面

--- a/app/src/main/res/drawable/indicator_dot.xml
+++ b/app/src/main/res/drawable/indicator_dot.xml
@@ -4,7 +4,7 @@
     android:shape="oval"
     android:useLevel="false" >
     <solid
-        android:color="@color/colorAccentzs" />
+        android:color="#e36e6868" />
     <size android:width="10dp"
         android:height="10dp" />
 
