--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorPrimaryzs">#3F51B5</color>
     <color name="colorPrimaryDarkzs">#fefeff</color>
     <color name="colorAccentzs">#646464</color>
+    <color name="touming">#19807f7f</color>
 
 </resources>
