--- a/app/src/main/res/layout/tutorial_info_page.xml
+++ b/app/src/main/res/layout/tutorial_info_page.xml
@@ -77,8 +77,8 @@
                 android:layout_height="44dp"
                 android:text="跳过"
                 android:textSize="20dp"
-                 android:background="@drawable/indicator_page"
-                android:textColor="#323232" />
+                 android:background="@drawable/indicator_page1"
+                android:textColor="#fafafa" />
             </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -92,10 +92,10 @@
                 android:id="@+id/done_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/indicator_page"
+                android:background="@drawable/indicator_page1"
                 android:text="立即体验"
                 android:textSize="21dp"
-                android:textColor="#323232"
+                android:textColor="#fafafa"
                 android:drawablePadding="1dp"
                 android:visibility="gone"></Button>
         </LinearLayout>
