//新添加登录界面，实现数据库和客户端的登录和注册

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,7 +1,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:background="#fff"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MissPhoto"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:layout_marginTop="9dp"
+        android:layout_gravity="center"
+        android:textColor="#050505" />
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+            android:src="@mipmap/touxiang1"/>
+    <EditText
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/yuanjiao"
+        android:layout_gravity="center"
+        android:layout_marginTop="45dp"
+        android:hint="请输入用户名："
+        android:id="@+id/first_username"
+        />
+    <EditText
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/yuanjiao"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:hint="请输入用户名："
+        android:id="@+id/first_password"
+        />
+    <Button
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="登录"
+        android:background="#eac5ecfc"
+        android:id="@+id/btn_first_entry"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:text="没有账号？点击这里注册"
+        android:id="@+id/btn_first_ok"
+        android:background="#fff"
+        android:textColor="#d9d6d6" />
+
+
 
 </LinearLayout>
